commit:5 | commenting code for a clear start

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -327,5 +327,5 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<input type="text" [(ngModel)]="name" />
-<p>{{ name }}</p>
+<!-- <input type="text" [(ngModel)]="name" />
+<p>{{ name }}</p> -->
