--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,3 +1,5 @@
-<p>servers works!</p>
+<!-- <p>servers works!</p> -->
+
+<button class="btn btn-primary" disabled>Add Server</button><br /><br />
 <app-server></app-server>
 <app-server></app-server>
