--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -2,5 +2,9 @@
 
 <button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button
 ><br /><br />
+
+<p>{{ allowNewServer }}</p>
+<p [innerText]="allowNewServer"></p>
+
 <app-server></app-server>
 <app-server></app-server>
