--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,10 +1,17 @@
 <!-- <p>servers works!</p> -->
 
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button
+<button
+  class="btn btn-primary"
+  [disabled]="!allowNewServer"
+  (click)="onCreateServer()"
+>
+  Add Server</button
 ><br /><br />
 
-<p>{{ allowNewServer }}</p>
-<p [innerText]="allowNewServer"></p>
+<!-- <p>{{ allowNewServer }}</p> -->
+<!-- <p [innerText]="allowNewServer"></p> -->
+
+<p>{{ serverCreationStatus }}</p>
 
 <app-server></app-server>
 <app-server></app-server>
