--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,5 +1,12 @@
 <!-- <p>servers works!</p> -->
 
+<label for="">Server Name: </label>
+<input
+  type="text"
+  class="form-control"
+  (input)="onUpdateServerName($event)"
+/><br />
+
 <button
   class="btn btn-primary"
   [disabled]="!allowNewServer"
