commit:22 | Passing and Using Data with Event Binding

--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -7,6 +7,8 @@
   (input)="onUpdateServerName($event)"
 /><br />
 
+<p>{{ serverName }}</p>
+
 <button
   class="btn btn-primary"
   [disabled]="!allowNewServer"
