--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -9,7 +9,7 @@
 
 <input type="text" class="form-control" [(ngModel)]="serverName" /><br />
 
-<p>{{ serverName }}</p>
+<!-- <p>{{ serverName }}</p> -->
 
 <button
   class="btn btn-primary"
