--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,3 +1,5 @@
 <!-- <p>The Server Component</p> -->
 <!-- <p>{{ "Server" }} with ID {{ serverId }} is {{ serverStatus }}</p> -->
-<p>{{ "Server" }} with ID {{ serverId }} is {{ getServerStatus() }}</p>
+<p [ngStyle]="{ backgroundColor: getColor() }">
+  {{ "Server" }} with ID {{ serverId }} is {{ getServerStatus() }}
+</p>
