--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,5 +1,8 @@
 <!-- <p>The Server Component</p> -->
 <!-- <p>{{ "Server" }} with ID {{ serverId }} is {{ serverStatus }}</p> -->
-<p [ngStyle]="{ backgroundColor: getColor() }">
+<p
+  [ngStyle]="{ backgroundColor: getColor() }"
+  [ngClass]="{ online: serverStatus === 'online' }"
+>
   {{ "Server" }} with ID {{ serverId }} is {{ getServerStatus() }}
 </p>
